--- a/apps/effect-worker-api/package.json
+++ b/apps/effect-worker-api/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@backpine/api": "workspace:^",
+    "@backpine/cloudflare": "workspace:^",
+    "@backpine/db": "workspace:^",
     "@backpine/domain": "workspace:^",
     "@effect/experimental": "latest",
     "@effect/platform": "latest",
