--- a/packages/cloudflare/package.json
+++ b/packages/cloudflare/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@backpine/cloudflare",
+  "name": "@repo/cloudflare",
   "version": "0.0.0",
   "type": "module",
   "license": "MIT",
