--- a/apps/effect-worker-rpc/package.json
+++ b/apps/effect-worker-rpc/package.json
@@ -13,10 +13,10 @@
     "build": "tsc && wrangler deploy --dry-run"
   },
   "dependencies": {
-    "@backpine/cloudflare": "workspace:^",
-    "@backpine/db": "workspace:^",
-    "@backpine/domain": "workspace:^",
-    "@backpine/contracts": "workspace:^",
+    "@repo/cloudflare": "workspace:^",
+    "@repo/db": "workspace:^",
+    "@repo/domain": "workspace:^",
+    "@repo/contracts": "workspace:^",
     "@effect/experimental": "latest",
     "@effect/platform": "latest",
     "@effect/rpc": "latest",
