--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@backpine/contracts",
+  "name": "@repo/contracts",
   "version": "0.0.0",
   "type": "module",
   "license": "MIT",
@@ -33,8 +33,8 @@
   "dependencies": {
     "@effect/platform": "latest",
     "@effect/rpc": "latest",
-    "@backpine/cloudflare": "workspace:^",
-    "@backpine/domain": "workspace:^",
+    "@repo/cloudflare": "workspace:^",
+    "@repo/domain": "workspace:^",
     "effect": "latest"
   }
 }
