--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,14 +21,14 @@
     "target": "ES2022",
     "module": "ESNext",
     "paths": {
-      "@backpine/cloudflare": ["./packages/cloudflare/src/index.ts"],
-      "@backpine/cloudflare/*": ["./packages/cloudflare/src/*"],
-      "@backpine/contracts": ["./packages/contracts/src/index.ts"],
-      "@backpine/contracts/*": ["./packages/contracts/src/*"],
-      "@backpine/db": ["./packages/db/src/index.ts"],
-      "@backpine/db/*": ["./packages/db/src/*"],
-      "@backpine/domain": ["./packages/domain/src/index.ts"],
-      "@backpine/domain/*": ["./packages/domain/src/*"]
+      "@repo/cloudflare": ["./packages/cloudflare/src/index.ts"],
+      "@repo/cloudflare/*": ["./packages/cloudflare/src/*"],
+      "@repo/contracts": ["./packages/contracts/src/index.ts"],
+      "@repo/contracts/*": ["./packages/contracts/src/*"],
+      "@repo/db": ["./packages/db/src/index.ts"],
+      "@repo/db/*": ["./packages/db/src/*"],
+      "@repo/domain": ["./packages/domain/src/index.ts"],
+      "@repo/domain/*": ["./packages/domain/src/*"]
     }
   }
 }
