--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,10 +20,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         uses: ./.github/actions/setup
-      - run: pnpm codegen
-      - name: Check source state
-        run: git add packages/*/src && git diff-index --cached HEAD --exit-code
-          packages/*/src
+      - name: Build packages
+        run: pnpm build
   types:
     name: Types
     runs-on: ubuntu-latest
