--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -23,7 +23,6 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@effect/platform": "latest",
-    "effect": "latest"
+    "effect": "catalog:"
   }
 }
